--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 
     <header>
-        <h1>Bienvenida a Mi Sitio Web</h1>
-        <p>Diseño web con animaciones suaves y pelaus ✨</p>
+        <h1>Bienvenida a Mi Sis</h1>
+        <p>Diseño we con animaciones sus y pelaus ✨</p>
     </header>
 
     <main>
         <div class = "widget-clima">
 <iframe 
-                src="https://www.meteoblue.com/es/weather/widget/daily/ip_argentina_675514?geoloc=fixed&days=7"
+                src="https://www.meteoblue.com/es/weather/widget/daily/ip_northcorea_675514?geoloc=fixed&days=7"
                 frameborder="0"
                 scrolling="NO"
                 allowtransparency="true"
@@ -29,4 +29,5 @@
     </section>
 
 </body>
+
 </html>
